# personal-agents

./: README.md
agents/a-share-analyst/: .env.example  README.md  pyproject.toml
agents/a-share-analyst/src/a_share_analyst/: __init__.py  agent.py  cli.py  config.py  prompts.py  session.py
