[project]
name = "a-share-analyst"
version = "0.1.0"
description = "A basic A-share analysis Q&A agent powered by Claude Agent SDK."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.80,<0.2.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
a-share-analyst = "a_share_analyst.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"
